[gd_scene load_steps=4 format=3 uid="uid://b8su8e0hk46wu"]

[ext_resource type="Script" path="res://crisisPhase/pause_menu.gd" id="1_wnduq"]
[ext_resource type="Texture2D" uid="uid://psk280o4uf5a" path="res://res/sprites/GUI/icons/icon_semaphore.png" id="2_wuoxr"]
[ext_resource type="PackedScene" uid="uid://cf2pewcvtrtic" path="res://GUI/UX_button.tscn" id="3_yj78q"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("1_wnduq")

[node name="VBC" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -295.0
offset_right = 288.0
offset_bottom = 413.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="VBC"]
custom_minimum_size = Vector2(575, 100)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBC/CenterContainer"]
custom_minimum_size = Vector2(330, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[color=white] Pausiert[/color]"

[node name="OverworldStates" type="CenterContainer" parent="VBC"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBC" type="VBoxContainer" parent="VBC/OverworldStates"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ElectricityState" type="HBoxContainer" parent="VBC/OverworldStates/VBC"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBC/OverworldStates/VBC/ElectricityState"]
custom_minimum_size = Vector2(35, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="Sprite2D" type="Sprite2D" parent="VBC/OverworldStates/VBC/ElectricityState/TextureRect"]
texture = ExtResource("2_wuoxr")
centered = false
hframes = 3

[node name="Name" type="RichTextLabel" parent="VBC/OverworldStates/VBC/ElectricityState"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
bbcode_enabled = true
text = "[color=white]Strom:[/color]"

[node name="Value" type="RichTextLabel" parent="VBC/OverworldStates/VBC/ElectricityState"]
custom_minimum_size = Vector2(350, 40)
layout_mode = 2
bbcode_enabled = true
text = "-
"

[node name="WaterState" type="HBoxContainer" parent="VBC/OverworldStates/VBC"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBC/OverworldStates/VBC/WaterState"]
custom_minimum_size = Vector2(35, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="Sprite2D" type="Sprite2D" parent="VBC/OverworldStates/VBC/WaterState/TextureRect"]
texture = ExtResource("2_wuoxr")
centered = false
hframes = 3

[node name="Name" type="RichTextLabel" parent="VBC/OverworldStates/VBC/WaterState"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
bbcode_enabled = true
text = "[color=white]Wasser:[/color]"

[node name="Value" type="RichTextLabel" parent="VBC/OverworldStates/VBC/WaterState"]
custom_minimum_size = Vector2(350, 40)
layout_mode = 2
bbcode_enabled = true
text = "-"

[node name="IsolationState" type="HBoxContainer" parent="VBC/OverworldStates/VBC"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBC/OverworldStates/VBC/IsolationState"]
custom_minimum_size = Vector2(35, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="Sprite2D" type="Sprite2D" parent="VBC/OverworldStates/VBC/IsolationState/TextureRect"]
texture = ExtResource("2_wuoxr")
centered = false
hframes = 3

[node name="Name" type="RichTextLabel" parent="VBC/OverworldStates/VBC/IsolationState"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
bbcode_enabled = true
text = "[color=white]Isolation:[/color]"

[node name="Value" type="RichTextLabel" parent="VBC/OverworldStates/VBC/IsolationState"]
custom_minimum_size = Vector2(350, 40)
layout_mode = 2
bbcode_enabled = true
text = "-
"

[node name="FoodContamState" type="HBoxContainer" parent="VBC/OverworldStates/VBC"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBC/OverworldStates/VBC/FoodContamState"]
custom_minimum_size = Vector2(35, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="Sprite2D" type="Sprite2D" parent="VBC/OverworldStates/VBC/FoodContamState/TextureRect"]
texture = ExtResource("2_wuoxr")
centered = false
hframes = 3

[node name="Name" type="RichTextLabel" parent="VBC/OverworldStates/VBC/FoodContamState"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
bbcode_enabled = true
text = "[color=white]Essen:[/color]"

[node name="Value" type="RichTextLabel" parent="VBC/OverworldStates/VBC/FoodContamState"]
custom_minimum_size = Vector2(350, 40)
layout_mode = 2
bbcode_enabled = true
text = "-
"

[node name="CenterContainer2" type="CenterContainer" parent="VBC"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="VBC/CenterContainer2"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="ResumeBtn" parent="VBC/CenterContainer2/Buttons" instance=ExtResource("3_yj78q")]
custom_minimum_size = Vector2(397, 49)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Fortsetzen"

[node name="Settings" parent="VBC/CenterContainer2/Buttons" instance=ExtResource("3_yj78q")]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Einstellungen"

[node name="CancelCurrCrisis" parent="VBC/CenterContainer2/Buttons" instance=ExtResource("3_yj78q")]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Krise abbrechen"

[node name="SaveAndQuit" parent="VBC/CenterContainer2/Buttons" instance=ExtResource("3_yj78q")]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Speichern & Schlie√üen"

[connection signal="pressed" from="VBC/CenterContainer2/Buttons/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="VBC/CenterContainer2/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBC/CenterContainer2/Buttons/CancelCurrCrisis" to="." method="_on_cancel_curr_crisis_pressed"]
[connection signal="pressed" from="VBC/CenterContainer2/Buttons/SaveAndQuit" to="." method="_on_save_and_quit_pressed"]
